adicionado aba shows

--- a/index.html
+++ b/index.html
@@ -36,5 +36,51 @@
             A disponibilidade de 4K UHD, HDR e Dolby Atmos varia de acordo com o dispositivo e o plano.
         </p>
     </section>
+    <section class="shows">
+        <nav class="shows__tabs">
+            <button data-tab-button="pode_gostar" class="shows__tabs__button shows__tabs__button--is-active">
+                Você também pode gostar
+            </button>
+            <button data-tab-button="adrenalina" class="shows__tabs__button">
+                Vitamina de policial é adrenalina
+            </button>
+        </nav>
+        <ul data-tab-id="pode_gostar" class="shows__list shows__list--is-active">
+            <li class="shows__list__item">
+                <img src="./dist/images/batman_begins.jpg" alt="batman begins">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/batman_dark_knights.jpg" alt="dark knight">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/gotham.jpg" alt="gotham">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/liga_da_jutica.jpg" alt="liga da justiça">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/pinguim.webp" alt="pinguim">
+            </li>
+        </ul>
+        <ul data-tab-id="adrenalina" class="shows__list">
+            <li class="shows__list__item">
+                <img src="./dist/images/batman_begins.jpg" alt="batman begins">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/batman_dark_knights.jpg" alt="dark knight">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/os_infiltrados.webp" alt="os infiltrados">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/blade_runner.webp" alt="blade runner">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/images/v_de_vingança.webp" alt="v de vinganca">
+            </li>
+        </ul>
+    </section>
+
+    <script src="./src/scripts/main.js"></script>
 </body>
 </html>
