--- a/index.html
+++ b/index.html
@@ -80,6 +80,28 @@
             </li>
         </ul>
     </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <p class="footer__container__text">© 2024 WarnerMedia Direct, LLC. Todos os direitos reservados.</p>
+            <ul>
+                <li class="footer__container__links">
+                    <a class="footer__container__links__item" href="#">Política de privacidade</a>
+                </li>
+                <li class="footer__container__links">
+                    <a class="footer__container__links__item" href="#">Termos de uso</a>
+                </li>
+                <li class="footer__container__links">
+                    <a class="footer__container__links__item" href="#">Gerir cookies</a>
+                </li>
+                <li class="footer__container__links">
+                    <a class="footer__container__links__item" href="#">Informações</a>
+                </li>
+                <li class="footer__container__links">
+                    <a class="footer__container__links__item" href="#">Ajuda</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
     <script src="./src/scripts/main.js"></script>
 </body>
