--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
-    <header>
-        <h1>
-            <img src="./dist/images/logos/max_logo.webp" alt="logo max">
-        </h1>
+    <header class="header">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/images/logos/max_logo.webp" alt="logo max">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item">
+                    <a class="button" href="#">Assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a class="button" href="#">Entrar</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <section class="hero">
         <div class="hero__container">
